@@ -1,3 +1,8 @@
+2014-06-18  Tom Tromey  <tromey@redhat.com>
+
+	* utils.h: Include errors.h.
+	(perror_with_name, error, fatal, warning): Don't declare.
+
 2014-06-20  Gary Benson  <gbenson@redhat.com>
 
 	* configure.ac (AC_REPLACE_FUNCS) <vasprintf, vsnprintf>: Removed.
